--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,17 @@
   <groupId>com.bitacademy</groupId>
   <artifactId>javastudy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+		<maven.compiler.source>12</maven.compiler.source>
+		<maven.compiler.target>12</maven.compiler.target>
+	</properties>
+	
+	<build>
+		<finalName>javastudy</finalName>
+	</build>
+	
 </project>
